Fixed the NPE when creating `Facts` with null field values.